Modified index page to include slider

--- a/Ready_Reader/app/views/users/index.html.erb
+++ b/Ready_Reader/app/views/users/index.html.erb
@@ -20,11 +20,10 @@
 
 
 <div class="bottom_bar">
-  <div id="progressbar"></div>
+  <div id="slider_bar"></div>
   <div class="percentage"> </div>
   <div class="text_progress"> </div>
 </div>
-
 
 <div id="turn_buttons">
   <!-- Would very much like to rename the h2 class names and fonts (defaults to h2 size font) below for semantic purposes. Will hold off due to JS ramifications -->
